# secstr

./: .travis-doc-conf.sh  .travis-doc-key.enc  .travis.yml  Cargo.toml  README.md
src/: lib.rs  secstr.rs
