[package]
name = "secstr"
version = "0.1.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Memory" ]
description = "A data type suitable for storing sensitive information such as passwords and private keys in memory, featuring constant time equality, mlock and zeroing out."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/secstr"
repository = "https://github.com/myfreeweb/secstr"
documentation = "https://myfreeweb.github.io/autodocs/secstr/secstr"

[lib]
name = "secstr"

[features]
#optional benchmarks using nightly/unstable Bencher
benchmark = []

[dependencies]
libc = "*"
