[package]
name = "secstr"
version = "0.4.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Memory" ]
description = "A data type suitable for storing sensitive information such as passwords and private keys in memory, featuring constant time equality, mlock and zeroing out."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/secstr"
repository = "https://github.com/myfreeweb/secstr"
documentation = "https://docs.rs/secstr/"

[lib]
name = "secstr"

[dependencies]
libc = "0.2"
libsodium-sys = { version = "0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_cbor = "0.11"
